syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Events {
    repeated factory_PairCreated factory_pair_createds = 1;
    repeated pair_Approval pair_approvals = 2;
    repeated pair_Burn pair_burns = 3;
    repeated pair_CancelLongTermOrder pair_cancel_long_term_orders = 4;
    repeated pair_LongTermSwap0To1 pair_long_term_swap0_to_1s = 5;
    repeated pair_LongTermSwap1To0 pair_long_term_swap1_to_0s = 6;
    repeated pair_LpFeeUpdated pair_lp_fee_updateds = 7;
    repeated pair_Mint pair_mints = 8;
    repeated pair_Swap pair_swaps = 9;
    repeated pair_Sync pair_syncs = 10;
    repeated pair_Transfer pair_transfers = 11;
    repeated pair_WithdrawProceedsFromLongTermOrder pair_withdraw_proceeds_from_long_term_orders = 12;
    repeated pair_VirtualOrderExecution pair_virtual_order_execution = 13;
}

message Calls {
    repeated factory_CreatePair1Call factory_call_create_pair_1s = 1;
    repeated factory_CreatePair2Call factory_call_create_pair_2s = 2;
    repeated factory_SetFeeToCall factory_call_set_fee_tos = 3;
    repeated factory_SetFeeToSetterCall factory_call_set_fee_to_setters = 4;
    repeated factory_ToggleGlobalPauseCall factory_call_toggle_global_pauses = 5;
    repeated pair_ApproveCall pair_call_approves = 6;
    repeated pair_BurnCall pair_call_burns = 7;
    repeated pair_CancelLongTermSwapCall pair_call_cancel_long_term_swaps = 8;
    repeated pair_ExecuteVirtualOrdersCall pair_call_execute_virtual_orders = 9;
    repeated pair_GetTwammOrderProceedsCall pair_call_get_twamm_order_proceeds = 10;
    repeated pair_InitializeCall pair_call_initializes = 11;
    repeated pair_LongTermSwapFrom0To1Call pair_call_long_term_swap_from0_to_1s = 12;
    repeated pair_LongTermSwapFrom1To0Call pair_call_long_term_swap_from1_to_0s = 13;
    repeated pair_MintCall pair_call_mints = 14;
    repeated pair_PermitCall pair_call_permits = 15;
    repeated pair_SetFeeCall pair_call_set_fees = 16;
    repeated pair_SkimCall pair_call_skims = 17;
    repeated pair_SwapCall pair_call_swaps = 18;
    repeated pair_SyncCall pair_call_syncs = 19;
    repeated pair_TogglePauseNewSwapsCall pair_call_toggle_pause_new_swaps = 20;
    repeated pair_TransferCall pair_call_transfers = 21;
    repeated pair_TransferFromCall pair_call_transfer_froms = 22;
    repeated pair_WithdrawProceedsFromLongTermSwapCall pair_call_withdraw_proceeds_from_long_term_swaps = 23;
}


message factory_PairCreated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes token0 = 5;
    bytes token1 = 6;
    bytes pair = 7;
    string param3 = 8;
}

message factory_CreatePair1Call {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes token_a = 6;
    bytes token_b = 7;
    string fee = 8;
    bytes output_pair = 9;
}

message factory_CreatePair2Call {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes token_a = 6;
    bytes token_b = 7;
    bytes output_pair = 8;
}

message factory_SetFeeToCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes u_fee_to = 6;
}

message factory_SetFeeToSetterCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes u_fee_to_setter = 6;
}

message factory_ToggleGlobalPauseCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
}

message pair_Approval {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes owner = 6;
    bytes spender = 7;
    string value = 8;
}

message pair_Burn {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    string amount0 = 7;
    string amount1 = 8;
    bytes to = 9;
}

message pair_CancelLongTermOrder {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes addr = 6;
    string order_id = 7;
    bytes sell_token = 8;
    string unsold_amount = 9;
    bytes buy_token = 10;
    string purchased_amount = 11;
}

message pair_LongTermSwap0To1 {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes addr = 6;
    string order_id = 7;
    string amount0_in = 8;
    string number_of_time_intervals = 9;
}

message pair_LongTermSwap1To0 {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes addr = 6;
    string order_id = 7;
    string amount1_in = 8;
    string number_of_time_intervals = 9;
}

message pair_LpFeeUpdated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    string fee = 6;
}

message pair_ExecuteVirtualOrders {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    string amount0 = 7;
    string amount1 = 8;
}

message pair_Mint {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    string amount0 = 7;
    string amount1 = 8;
}

message pair_Swap {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    string amount0_in = 7;
    string amount1_in = 8;
    string amount0_out = 9;
    string amount1_out = 10;
    bytes to = 11;
}

message pair_Sync {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    string reserve0 = 6;
    string reserve1 = 7;
}

message pair_Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes from = 6;
    bytes to = 7;
    string value = 8;
}

message pair_WithdrawProceedsFromLongTermOrder {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes addr = 6;
    string order_id = 7;
    bytes proceed_token = 8;
    string proceeds = 9;
    bool order_expired = 10;
}

message pair_VirtualOrderExecution {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    google.protobuf.Timestamp blockTimestamp = 6;
    google.protobuf.Timestamp blockTimestampElapsed = 7;
    string newReserve0 = 8;
    string newReserve1 = 9;
    string newTwammReserve0 = 10;
    string newTwammReserve1 = 11;
    string token0Bought = 12;
    string token1Bought = 13;
    string token0Sold = 14;
    string token1Sold = 15;
}

message pair_ApproveCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes spender = 7;
    string value = 8;
    bool output_param0 = 9;
}

message pair_BurnCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes to = 7;
    string output_amount0 = 8;
    string output_amount1 = 9;
}

message pair_CancelLongTermSwapCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string order_id = 7;
}

message pair_ExecuteVirtualOrdersCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string block_timestamp = 7;
}

message pair_GetTwammOrderProceedsCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string order_id = 7;
    bool output_order_expired = 8;
    string output_total_reward = 9;
}

message pair_InitializeCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes u_token0 = 7;
    bytes u_token1 = 8;
    string u_fee = 9;
}

message pair_LongTermSwapFrom0To1Call {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string amount0_in = 7;
    string number_of_time_intervals = 8;
    string output_order_id = 9;
}

message pair_LongTermSwapFrom1To0Call {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string amount1_in = 7;
    string number_of_time_intervals = 8;
    string output_order_id = 9;
}

message pair_MintCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes to = 7;
    string output_liquidity = 8;
}

message pair_PermitCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes owner = 7;
    bytes spender = 8;
    string value = 9;
    string deadline = 10;
    uint64 v = 11;
    bytes r = 12;
    bytes s = 13;
}

message pair_SetFeeCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string new_fee = 7;
}

message pair_SkimCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes to = 7;
}

message pair_SwapCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string amount0_out = 7;
    string amount1_out = 8;
    bytes to = 9;
    bytes data = 10;
}

message pair_SyncCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
}

message pair_TogglePauseNewSwapsCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
}

message pair_TransferCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes to = 7;
    string value = 8;
    bool output_param0 = 9;
}

message pair_TransferFromCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes from = 7;
    bytes to = 8;
    string value = 9;
    bool output_param0 = 10;
}

message pair_WithdrawProceedsFromLongTermSwapCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string order_id = 7;
    bool output_is_expired = 8;
    bytes output_reward_tkn = 9;
    string output_total_reward = 10;
}
